syntax = "proto3";

package ai.metathings.service.identityd2;
option go_package = "github.com/nayotta/metathings/proto/identityd2";

import "google/protobuf/wrappers.proto";

import "model.proto";

message CreateCredentialRequest {
	OpCredential credential = 1;
	google.protobuf.Int32Value secret_size = 2;
}

message CreateCredentialResponse {
	Credential credential = 1;
}
